# laundry-data

./: .gitignore  Cargo.toml  book.toml  compose.mssql.yaml  compose.postgres.yaml  mise.mssql.toml  mise.postgres.toml  mise.sqlite.toml  mise.toml
.github/workflows/: docs.yml
docs/: Architecture.md  Considerations.md  Index.md  Notes.md  SUMMARY.md  Schema.md  Wishes.md  extended.dbml  schema.dbml
docs/assets/: .gitignore
http/: csc.http  http-client.env.json
migrations/mssql/: V1__create_init.sql
migrations/postgres/: V1__create_init.sql
migrations/sqlite/: V1__create_init.sql
sql-experiment/: Cargo.toml  README.md
sql-experiment/src/: lib.rs
sql-experiment/src/config/: mod.rs  mssql.rs  postgres.rs  sqlite.rs  traits.rs
sql-experiment/src/connection/: common.rs  mod.rs  mssql.rs  postgres.rs  sqlite.rs
sql-experiment/src/error/: common.rs  mod.rs  mssql.rs  pool.rs  postgres.rs  query.rs  sqlite.rs
sql-experiment/src/pool/: common.rs  mod.rs  mssql.rs  postgres.rs  sqlite.rs  traits.rs
sql-experiment/src/tests/: mod.rs
sql-experiment/tests/: mssql.rs  postgres.rs  sqlite.rs
src/: db.rs  http.rs  main.rs  pep.rs  types.rs  utils.rs
src/logic/: db.rs  http.rs  mod.rs
src/models/: api.rs  config.rs  mod.rs
