[package]
name = "laundry-data"
version = "0.1.0"
edition = "2024"
publish = false


[dependencies]
# Fails to compile without sqlite. TODO: Fix and PR
sql-middleware = { version = "0.6.0", default-features = false, features = ["sqlite"] }
refinery = { version = "0.9.0", features = ["enums"] }
tokio = { version = "1", features = ["full"] }
color-eyre = "0.6"


[features]
default = []
postgres = ["sql-middleware/postgres", "refinery/tokio-postgres"]
sqlite = ["sql-middleware/sqlite","refinery/rusqlite"]
turso = ["sql-middleware/turso"] # TODO: remove support
mssql = ["sql-middleware/mssql", "refinery/tiberius", "refinery/tiberius-config"]


[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
