[package]
name = "sql-experiment"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
bon = "3.9.0"
thiserror = "2"
enum_dispatch = "0.3.13"
deadpool = { version = "0.12.3", features = ["managed"] }

# tokio stuff for tiberius
tokio = { version = "1", features = ["net"], optional = true }
tokio-util = { version = "0.7", features = ["compat"], optional = true }

# Postgres
deadpool-postgres = { version = "0.14.1", features = [], optional = true }
tokio-postgres = { version = "0.7", features = [], optional = true }

# Sqlite
deadpool-sqlite = { version = "0.12.1", features = ["bundled"], optional = true }
rusqlite = { version = "0.37", features = ["bundled"], optional = true }

# Sql Server
deadpool-tiberius = { version = "0.1.9", features = [], optional = true }
tiberius = { version = "0.12", features = [], optional = true }




#refinery = { version = "*", features = [], optional = true }
#refinery-core = { version = "*", features = [], optional = true }
#refinery-macros = { version = "*", features = [], optional = true }
#refinery-migrations = { version = "*", features = [], optional = true }

[features]
default = ["mssql", "sqlite", "postgres"] # TODO: Remove
mssql = ["dep:tiberius", "dep:deadpool-tiberius", "dep:tokio", "dep:tokio-util"]
sqlite = ["dep:deadpool-sqlite", "dep:rusqlite"]
postgres = ["dep:tokio-postgres", "dep:deadpool-postgres"]
# TODO: refinery support
migrations = []

# Add features to the CommonDatabaseConfig object
"config_serde" = []
"config_builder" = []

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
